# KGLab_WS2022

./: .gitignore  .project  README.md  analysis.py  main.py  pyproject.toml  requirements.txt  url_predictor_test.py
.github/: build.yml
.github/workflows/: build.yml
KGLab_WS2022/: __main__.py  database_utils.py  event.py  event_predictor.py  generator_analyser.py  nlp_predictor.py  past_event.py  pred_event.py  prediction_analyzer.py  series.py  table.py  ui.py  url_predictor.py
KGLab_WS2022/analysis/: generators.json  predictions.json  predictions2.json  results.json
KGLab_WS2022/databases/: event.db
main/: __main__.py
tests/: basetest.py  test_event_predictor.py  test_nlppredictor.py  test_test.py  test_urlpredictor.py
