# see https://flit.pypa.io/en/latest/pyproject_toml.html
[build-system]
#requires = ["flit_core >=3.2,<4"]
#build-backend = "flit_core.buildapi"
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pysotsog"
# flit_core.config.ConfigError: license field should be <class 'dict'>, not <class 'str'>
license = { file="LICENSE" }
dependencies = [
		# https://github.com/justpy-org/justpy
        'justpy~=0.11.3',
        # https://pypi.org/project/pylodstorage/
        'pyLodStorage~=0.4.7',
        # https://pypi.org/project/habanero/
        'habanero~=1.2.2',
        # https://pypi.org/project/pyJustpyWidgets/
        'pyJustpyWidgets~=0.1.3',
        # https://pypi.org/project/search-engine-parser/
        'search-engine-parser~=0.6.8',
        # https://github.com/fake-useragent/fake-useragent
        'fake-useragent>=0.1.11',
        # https://pypi.org/project/py-3rdparty-mediawiki/
        'py-3rdparty-mediawiki~=0.7.1',
        # https://pypi.org/project/semanticscholar/
        'semanticscholar~=0.3.0'
     ]

