

[project]
name = "kglab_ws2022"
dependencies = [
		# https://github.com/justpy-org/justpy
        'justpy',
        # https://pypi.org/project/pylodstorage/
        'pyLodStorage',
        # https://pypi.org/project/habanero/
        'habanero',
        # https://pypi.org/project/pyJustpyWidgets/
        'pyJustpyWidgets',
        # https://pypi.org/project/search-engine-parser/
        'search-engine-parser',
        # https://github.com/fake-useragent/fake-useragent
        'fake-useragent>=0.1.11',
        # https://pypi.org/project/py-3rdparty-mediawiki/
        'py-3rdparty-mediawiki',
        # https://pypi.org/project/semanticscholar/
        'semanticscholar',
        'requests_html',
        'bs4',
        'pyLookupParser'
     ]
version = "0.1.0"

